--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -24,3 +24,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/Prototype")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/Prototype")
 
+[/Script/Engine.RendererSettings]
+r.GenerateMeshDistanceFields=True
+
